Ensure editor text is visible

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -59,3 +59,10 @@ a {
 .panel-footer {
     background-color: #7A7575;
 }
+
+/* ================================================= */
+
+/* Make the text black in the bootstrap-markdown editor/preview */
+.md-editor {
+    color: black;
+}
